# Frothleikr

./: CMakeLists.txt  README  README.md  frothleikr.h  ftr_broke_types.c  ftr_broke_types.h  ftr_config.h  ftr_io_buffer.c  ftr_io_buffer.h  ftr_io_operations.c  ftr_io_operations.h  ftr_types.h  ftr_util.c  ftr_util.h
examples/: CMakeLists.txt
examples/file_io/: CMakeLists.txt  file_io.c
examples/first_example/: CMakeLists.txt  first_example.c
examples/floating_point/: CMakeLists.txt  floating_point.c
examples/using_buffers/: CMakeLists.txt  using_buffers.c
include/: frothleikr.h  ftr_archive.h  ftr_broke_types.h  ftr_config.h  ftr_io_buffer.h  ftr_io_buffer_seeker.h  ftr_io_logger.h  ftr_io_operations.h  ftr_types.h  ftr_util.h
src/: ftr_archive.c  ftr_broke_types.c  ftr_io_buffer.c  ftr_io_buffer_seeker.c  ftr_io_logger.c  ftr_io_operations.c  ftr_util.c
tests/: CMakeLists.txt  test1.c
